--- a/src/modules/graph/components/SleepSessionTooltip/SleepSessionTooltip.module.scss
+++ b/src/modules/graph/components/SleepSessionTooltip/SleepSessionTooltip.module.scss
@@ -1,6 +1,6 @@
 .tooltip {
   width: 200px;
-  background-color: #3b3b3b;
+  background-color: #1e1e1e;
   border: 1px solid #d2d2d2;
   border-radius: 5px;
   padding: 10px;
