--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -4,7 +4,6 @@
   position: relative;
   background-color: #0e0e0e;
 
-
   .sessions {
     position: absolute;
     top: 3px;
@@ -19,6 +18,17 @@
     right: 10px;
     display: flex;
     flex-direction: column;
+
+    * {
+      opacity: 0.7;
+      transition: opacity ease-in-out 0.5s;
+    }
+
+    &:hover {
+      * {
+        opacity: 1;
+      }
+    }
 
     .configPanel {
       margin-bottom: 10px;
