--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -7,8 +7,9 @@
   .sessions {
     position: absolute;
     top: 3px;
-    left: 5px;
+    left: 6px;
     font-size: 0.8rem;
+    color: #19ee19;
   }
 
   .controls {
