--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -54,5 +54,16 @@
     .configPanel {
       margin-bottom: 10px;
     }
+
+    .bottom {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      .dateRangePicker {
+        flex: 1;
+      }
+    }
   }
 }
