--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -4,32 +4,11 @@
   position: relative;
   background-color: #0e0e0e;
 
-  .topLeftControls {
-    font-family: "Nunito", sans-serif;
+  .sessionInfo {
     position: absolute;
     top: 3px;
     left: 6px;
     z-index: 10;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    .sessions {
-      margin: 0;
-      font-size: 0.8rem;
-      text-transform: uppercase;
-    }
-
-    .github {
-      font-size: 1.1em;
-      color: #efefef;
-      transition: all ease-in-out 0.2s;
-
-      &:hover {
-        color: #ffffff;
-        cursor: pointer;
-      }
-    }
   }
 
   .controls {
