feat(graph): session count colour now transitions with same animation duration as graph

--- a/src/modules/graph/components/ActiveSessionInfo/ActiveSessionInfo.module.scss
+++ b/src/modules/graph/components/ActiveSessionInfo/ActiveSessionInfo.module.scss
@@ -12,6 +12,7 @@
       margin: 0;
       font-size: 0.8rem;
       text-transform: uppercase;
+      transition: all ease-in-out 0.5s;
     }
 
     .github {
