feat(graph): first pass of enabling stacked graphs

--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -17,4 +17,14 @@
     top: 3px;
     right: 10px;
   }
+
+  .graphContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .graph {
+      flex: 1;
+    }
+  }
 }
