feat(graph): fixed non-stacked view and added dynamic stacked colours to active session info

--- a/src/modules/graph/components/ActiveSessionInfo/ActiveSessionInfo.module.scss
+++ b/src/modules/graph/components/ActiveSessionInfo/ActiveSessionInfo.module.scss
@@ -12,7 +12,10 @@
       margin: 0;
       font-size: 0.8rem;
       text-transform: uppercase;
-      transition: all ease-in-out 0.5s;
+
+      >span {
+        transition: all ease-in-out 0.5s;
+      }
     }
 
     .github {
