--- a/src/pages/SleepPage.module.scss
+++ b/src/pages/SleepPage.module.scss
@@ -23,7 +23,18 @@
     display: flex;
     flex-direction: column;
 
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+
     .graph {
+      opacity: 0;
+      animation: fadeIn 0.5s ease-in-out forwards;
       flex: 1;
     }
 
