feat(graph): metric checkbox now has button mode and graph placeholder improved button styling

--- a/src/modules/graph/components/StackedGraphPlaceholder/StackedGraphPlaceholder.module.scss
+++ b/src/modules/graph/components/StackedGraphPlaceholder/StackedGraphPlaceholder.module.scss
@@ -20,4 +20,13 @@
     font-size: 1.5em;
     font-family: 'Nunito', sans-serif;
   }
+
+  .metrics {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+
+    .checkbox {
+    }
+  }
 }
