fix(graph): fixed react hooks lifecycle error with stacked graphs

--- a/src/modules/graph/components/StackedGraphPlaceholder/StackedGraphPlaceholder.module.scss
+++ b/src/modules/graph/components/StackedGraphPlaceholder/StackedGraphPlaceholder.module.scss
@@ -26,7 +26,51 @@
     gap: 10px;
     margin: 10px 0;
 
-    .checkbox {
+    .button {
+      width: 100px;
+      transition: all ease-in-out 0.2s;
+    }
+
+    .quality {
+      &:hover {
+        color: rgb(145,71,255);
+        border-color: rgb(145,71,255);
+      }
+    }
+
+    .duration_percent {
+      &:hover {
+        color: rgb(248,242,32);
+        border-color: rgb(248,242,32);
+      }
+    }
+
+    .awake_time {
+      &:hover {
+        color: rgb(255,188,21);
+        border-color: rgb(255,188,21);
+      }
+    }
+
+    .light_sleep {
+      &:hover {
+        color: rgb(84,234,153);
+        border-color: rgb(84,234,153);
+      }
+    }
+
+    .deep_sleep {
+      &:hover {
+        color: rgb(21,150,255);
+        border-color: rgb(21,150,255);
+      }
+    }
+
+    .rem_sleep {
+      &:hover {
+        color: rgb(255,71,231);
+        border-color: rgb(255,71,231);
+      }
     }
   }
 }
